--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,7 +4,7 @@
     "installCommand": "npm ci",
     "framework": "vite",
     "env": {
-      "VITE_API_URL": "https://YOUR-BACKEND.example.com"
+      "VITE_API_URL": "https://YOUR-BACKEND-URL.onrender.com"
     }
   }
   
